--- a/.gitignore
+++ b/.gitignore
@@ -137,7 +137,7 @@
 
 	<p><br></p>
 	<p style="color: rgb(0, 0, 0);background: transparent;margin-top: 0.49cm;margin-bottom: 0cm;line-height: 100%;text-align: center;">______________</p>
-	<p style="color: rgb(0, 0, 0);background: transparent;margin-top: 0.49cm;margin-bottom: 0cm;line-height: 100%;text-align: center;">RODRIGO HENRIQUE <strong>PRADO</strong>- MAJ MED</p>
+	<p style="color: rgb(0, 0, 0);background: transparent;margin-top: 0.49cm;margin-bottom: 0cm;line-height: 100%;text-align: center;">RH <strong>PRADO</strong>- MAJ MED</p>
 	<p style="color: rgb(0, 0, 0);background: transparent;margin-top: 0.49cm;margin-bottom: 0cm;line-height: 100%;text-align: center;">Ch Audioria Concorrente/ HMAPA.</p>
 	<p style="color: rgb(0, 0, 0);background: transparent;margin-top: 0.49cm;margin-bottom: 0cm;line-height: 100%;text-align: center;"><br></p>
 
@@ -239,7 +239,7 @@
 	<p style="margin-bottom: 0cm;color: #000000;line-height: 100%;background: transparent;"><br></p>
 	<p style="margin-bottom: 0cm;color: #000000;line-height: 100%;background: transparent;"><br></p>
 	<p style="text-align: center;color: rgb(0, 0, 0);">______________</p>
-	<p style="text-align: center;color: rgb(0, 0, 0);">RODRIGO HENRIQUE <strong>PRADO</strong>- MAJ MED</p>
+	<p style="text-align: center;color: rgb(0, 0, 0);">RH <strong>PRADO</strong>- MAJ MED</p>
 	<p style="text-align: center;color: rgb(0, 0, 0);">Ch Auditoria Concorrente/ HMAPA.</p>
 	<p style="text-align: center;color: rgb(0, 0, 0);"><br></p>
 
@@ -289,7 +289,7 @@
 	<p style="text-align: left; color: rgb(0, 0, 0);"><br></p>
 	<p style="text-align: left; color: rgb(0, 0, 0);"><br></p>
 	<p style="text-align: center;color: rgb(0, 0, 0);">______________</p>
-	<p style="text-align: center;color: rgb(0, 0, 0);">RODRIGO HENRIQUE <strong>PRADO</strong>- MAJ MED</p>
+	<p style="text-align: center;color: rgb(0, 0, 0);">RH <strong>PRADO</strong>- MAJ MED</p>
 	<p style="text-align: center;color: rgb(0, 0, 0);">Ch Audioria Concorrente/ HMAPA.</p>
 	<p style="text-align: left; color: rgb(0, 0, 0);"><br></p>
 
@@ -333,7 +333,7 @@
 	<p style="color: rgb(0, 0, 0);background: transparent;margin-left: 1.25cm;text-indent: 0.08cm;margin-bottom: 0.02cm;line-height: 0.18cm;text-align: right;"><br>&nbsp;</p>
 	<p style="text-align: left; color: rgb(0, 0, 0);"><br></p>
 	<p style="text-align: center;color: rgb(0, 0, 0);">______________</p>
-	<p style="text-align: center;color: rgb(0, 0, 0);">RODRIGO HENRIQUE <strong>PRADO</strong>- MAJ MED</p>
+	<p style="text-align: center;color: rgb(0, 0, 0);">RH <strong>PRADO</strong>- MAJ MED</p>
 	<p style="text-align: center;color: rgb(0, 0, 0);">Ch Audioria Concorrente/ HMAPA.</p>
 	<p style="text-align: left; color: rgb(0, 0, 0);"><br></p>
 	<p style="text-align: left; color: rgb(0, 0, 0);"><br></p>
